--- a/Module/lang/en.json
+++ b/Module/lang/en.json
@@ -2,8 +2,10 @@
     "MaterialPlane.Sett.En": "Enable module",
     "MaterialPlane.Sett.MovementMethod": "Movement Method",
     "MaterialPlane.Sett.MovementMethod_Hint": "Sets the movement method. 'Default' is the default Foundry behavior (vision updates after move), 'Step-by-Step' moves the token onto every grid you drag along, updating the vision every step",
+    "MaterialPlane.Sett.MovementMethod_Default": "Default",
+    "MaterialPlane.Sett.MovementMethod_SbS": "Step-by-step",
     "MaterialPlane.Sett.Deselect": "Deselect token after drop",
-    "MaterialPlane.Sett.Deselect_Hint": "Deselect the token when it is no longer dragged (works great in combination with the 'Hot Seat' module",
+    "MaterialPlane.Sett.Deselect_Hint": "Deselect the token when it is no longer dragged",
     "MaterialPlane.Sett.NonownedMovement": "Non-owned movement",
     "MaterialPlane.Sett.NonownedMovement_Hint": "Enable the movement of non-owned tokens",
     "MaterialPlane.Sett.TargetName": "Target Name",
@@ -13,18 +15,19 @@
     "MaterialPlane.Sett.SensorIP": "Sensor Module IP",
     "MaterialPlane.Sett.SensorIP_Hint": "Fill in the IP address of the sensor module",
 
-    "MaterialPlane.Notifications.Battery": "IR sensor: Low battery",
-    "MaterialPlane.Notifications.Connected": "IR sensor: Connected on: ",
-    "MaterialPlane.Notifications.Disconnected": "IR sensor: Disconnected, attempting to reconnect",
-    "MaterialPlane.Notifications.ConnectFail": "IR sensor: Can't connect, retrying",
-
+    "MaterialPlane.Notifications.Battery": "Low battery",
+    "MaterialPlane.Notifications.Connected": "Connected to ",
+    "MaterialPlane.Notifications.Disconnected": "Disconnected, attempting to reconnect",
+    "MaterialPlane.Notifications.ConnectFail": "Can't connect, retrying",
+    "MaterialPlane.Notifications.SSL": "SSL is not supported",
+    
     "MaterialPlane.CalDialog.Singlepoint1": "Single-point calibration",
     "MaterialPlane.CalDialog.Singlepoint2": "Please calibrate each corner of you screen.",
     "MaterialPlane.CalDialog.Multipoint1": "Multipoint calibration",
     "MaterialPlane.CalDialog.Multipoint2": "Please switch on the corner LEDs.",
     "MaterialPlane.CalDialog.Offset1": "Offset calibration",
     "MaterialPlane.CalDialog.Offset2": "Please calibrate each corner of you screen.",
-    "MaterialPlane.CalDialog.PointsCalibrated": "/4 points calibrated",
+    "MaterialPlane.CalDialog.PointsCalibrated": "points calibrated",
     "MaterialPlane.CalDialog.CalComplete": "Calibration completed!",
     "MaterialPlane.CalDialog.CalCancel": "Calibration Cancelled",
     "MaterialPlane.CalDialog.CalClose": "Closing screen in 5 seconds",
@@ -34,7 +37,7 @@
     "MaterialPlane.CalSett.Title": "Calibration Menu",
     "MaterialPlane.CalSett.Coordinates": "Coordinates",
     "MaterialPlane.CalSett.Point": "Point",
-    "MaterialPlane.CalSett.Intensity": "Intensity",
+    "MaterialPlane.CalSett.Intensity": "Int",
     "MaterialPlane.CalSett.Settings": "Settings",
     "MaterialPlane.CalSett.MirrorX": "Mirror X",
     "MaterialPlane.CalSett.MirrorY": "Mirror Y",
